--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="input email">
                     <i class="fa-regular fa-envelope email"></i>
-                    <input type="e" name="email" id="email" placeholder="Enter Your Email">
+                    <input type="email" name="email" id="email" placeholder="Enter Your Email">
                 </div>
 
                 <div class="input number">
