submit button fuctional

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section id="contact">
         <h1 class="h-primary center">Contact Us</h1>
         <div id="contact-box">
-            <form action="">
+            <form action="https://formsubmit.co/sujaypaul531@gmail.com" method="POST">
                 <div class="input name">
                     <i class="fa-regular fa-user"></i>
                     <input type="text" name="name" id="name" placeholder="Enter Your Name">
@@ -110,7 +110,7 @@
 
                 <div class="input number">
                     <i class="fa-solid fa-phone"></i>
-                    <input type="phone" name="number" id="number" placeholder="Enter Your number">
+                    <input type="tel" name="number" id="number" placeholder="Enter Your number">
                 </div>
 
                 <div class="input messege">
@@ -130,7 +130,7 @@
                         <option value="Gujrat">Gujrat</option>
                         <option value="Assam">Assam</option>
                     </select>
-                    
+
                 </div>
                 <button class="btn">SUBMIT</button>
                 <button class="btn">RESET</button>
